--- a/public/app/views/pages/mealRequests.html
+++ b/public/app/views/pages/mealRequests.html
@@ -1,27 +1,20 @@
 <md-card>
-  <md-card-content ng-init="meals.getMeals()">
-
+  <md-card-content>
     <md-button id="MealsButton" class="md-raised md-warn" aria-label="Actualizar" ng-click="meals.NewDate()">
       <span>Actualizar fecha</span>
     </md-button>
-    <md-datepicker ng-model="" md-placeholder="Fecha">
-    </md-datepicker>
-
+    <md-datepicker ng-model="meals.pickDate" ng-change="meals.getMeals(meals.pickDate)" md-placeholder="Fecha"></md-datepicker>
     <md-list>
       <md-subheader class="md-no-sticky">Listado</md-subheader>
-
-      <md-list-item class="md-3-line" ng-repeat="request in meals.requests| orderBy:'date'">
+      <md-list-item class="md-3-line" ng-repeat="(key, value) in meals.requests| groupBy: 'change' as requests">
         <div class="md-list-item-text">
-        <h3><b>{{ request.id }}</b></h3>
-        <h4>{{ request.change }}</h4>
-        <p>{{ request.date | date:'dd-MM-yyyy' }}</p>
+        <h3>Group name: {{ key }}: <b>{{requests[key].length}}</b></h3>
+        <li ng-repeat="user in value">
+          {{ user.id }} 
+        </li>
         </div>
-        <md-button class="md-warn" ng-click="meals.deleteRequest(request._id)">Borrar</md-button>
       </md-list-item>
-
-      <md-divider ></md-divider>
-
+      <md-divider></md-divider>
     </md-list>
-
   </md-card-content>
 </md-card>
