All books taken
Library admins can now see all the books that are being read

--- a/public/app/views/pages/myBooks.html
+++ b/public/app/views/pages/myBooks.html
@@ -11,6 +11,7 @@
         <p>{{ book.titulo }}</p>
         <p>{{ book.idioma }}</p>
         <p>{{ book.lugar }}</p>
+        <p>{{ book.fecha }}</p>
         </div>
         <md-button class="md-warn" ng-click="books.returnBook(book._id)">Devolver</md-button>
       </md-list-item>
