myMeals: only future meal requests
In myMeals section, retrieve only meals from yesterday, not the
previous one

--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -15,7 +15,7 @@
             </md-select>
           </md-input-container>
 
-          <md-datepicker md-min-date="meals.currentDate" ng-model="meals.mealAsked.date" md-placeholder="Fecha">
+          <md-datepicker ng-model="meals.mealAsked.date" md-placeholder="Fecha">
           </md-datepicker>
 
         <md-button type="submit" id="MealsButton" class="md-raised" ng-class="meals.MealError ? 'md-warn' : 'md-primary'" aria-label="Enviar">
