--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -39,12 +39,14 @@
   <script src="app/controllers/mealController.js"></script>
   <script src="app/controllers/settingsController.js"></script>
   <script src="app/controllers/booksController.js"></script>
+  <script src="app/controllers/eventsController.js"></script>
 
   <!-- services -->
   <script src="app/services/authService.js"></script>
   <script src="app/services/mealService.js"></script>
   <script src="app/services/settingsService.js"></script>
   <script src="app/services/bookService.js"></script>
+  <script src="app/services/eventsService.js"></script>
 
   <!-- main Angular app files -->
   <script src="app/app.routes.js"></script>
