Angular enviroment variables
New Env.js file added for api keys

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -13,6 +13,7 @@
    <meta name="apple-mobile-web-app-capable" content="yes">
    <meta name="apple-mobile-web-app-status-bar-style" content="black">
    <link rel="icon" sizes="192x192" href="/launcher-icon-4x.png">
+    <script src="app/env.js"></script>
 
 
   <!-- JS -->
