--- a/public/app/views/pages/settings.html
+++ b/public/app/views/pages/settings.html
@@ -1,5 +1,5 @@
 <md-card>
-  <md-card-content ng-init="settings.getUsers()">
+  <md-card-content>
     <form ng-submit="settings.send()">
 
           <md-input-container >
