New settings page
Settings available:
  Clear all Meals, Books and Users
  Put back MinimumMealsDate
  Create/Edit Users

--- a/public/app/views/pages/settings.html
+++ b/public/app/views/pages/settings.html
@@ -1,59 +1,24 @@
 <md-card>
-  <md-card-content>
-    <form ng-submit="settings.send()">
-
-          <md-input-container >
-            <label>Nombre</label>
-            <input ng-model="settings.user.Name" required>
-          </md-input-container>
-          <md-input-container>
-            <label>e-mail</label>
-            <input ng-model="settings.user.Email" required>
-          </md-input-container>
-
-          <md-input-container>
-            <label>Número</label>
-            <input name="number" ng-model="settings.user.Number" required ng-pattern="/^[0-9]*$/">
-          </md-input-container>
-
-          <div class="standard">
-              <label>
-                <input type="checkbox" ng-checked="settings.isChecked('Admin')" ng-click="settings.toggle('Admin')"/>
-                Administrador
-              </label>
-              <label>
-                <input type="checkbox" ng-checked="settings.isChecked('Meals')" ng-click="settings.toggle('Meals')"/>
-                Comidas
-              </label>
-              <label>
-                <input type="checkbox" ng-checked="settings.isChecked('Library')" ng-click="settings.toggle('Library')"/>
-                Biblioteca
-              </label>
-          </div>
-
-        <md-button type="submit" class="md-raised md-primary" aria-label="Enviar">Primary</md-button>
-    </form>
-  </md-card-content>
-</md-card>
-
-
-<md-card>
-  <md-card-content>
-    <h2>Lista de usuarios</h2>
-    <md-divider ></md-divider>
-      <md-list-item class="md-3-line" ng-repeat="user in settings.users| orderBy:'number'">
-        <div class="md-list-item-text">
-          <h3><b>{{ user.number }}</b></h3>
-          <p>{{ user.email}}</p>
-          <p>{{ user.admin}}</p>
-          <p>{{ user.meals}}</p>
-          <p>{{ user.library}}</p>
-          <p>{{ user._id}}</p>
-          <p>{{ user.hasDiet}}</p>
-          <p>{{ user.dietContent}}</p>
-        </div>
-        <md-button class="md-primary" ng-click="settings.editUser(user._id)">Editar</md-button>
-        <md-button class="md-warn" ng-click="settings.deleteUser(user._id)">Borrar</md-button>
-      </md-list-item>
+  <md-card-content ng-init="settings.loadSettingsData()">
+  <md-list>
+    <md-list-item class="noright" ng-click="settings.gotoUsersList()">
+      <p>Ver lista de usuarios</p>
+    </md-list-item>
+    <md-list-item class="noright" ng-click="settings.gotoAddUser()">
+      <p>Añadir nuevo usuario</p>
+    </md-list-item>
+    <md-list-item ng-click="settings.openDial(settings.clearAll,'LastDate', $event)" class="noright">
+      <p>Resetear la última fecha de comidas (<b>{{settings.settingsData.lastMealsDate | date:'dd/MM/yyyy'}}</b>)</p>
+    </md-list-item>
+    <md-list-item ng-click="settings.openDial(settings.clearAll,'Meal', $event)" class="noright">
+      <p>Borrar todas las comidas (<b>{{settings.settingsData.mealsInDB}}</b>)</p>
+    </md-list-item>
+    <md-list-item ng-click="settings.openDial(settings.clearAll,'User', $event)" class="noright">
+      <p>Borrar todos los usuarios (<b>{{settings.settingsData.usersInDB}}</b>)</p>
+    </md-list-item>
+    <md-list-item ng-click="settings.openDial(settings.clearAll,'Book', $event)" class="noright">
+      <p>Borrar todos los libros (<b>{{settings.settingsData.booksInDB}}</b>)</p>
+    </md-list-item>
+  </md-list>
   </md-card-content>
 </md-card>
