New Sports section

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -41,6 +41,7 @@
   <script src="app/controllers/settingsController.js"></script>
   <script src="app/controllers/booksController.js"></script>
   <script src="app/controllers/eventsController.js"></script>
+  <script src="app/controllers/sportsController.js"></script>
 
   <!-- services -->
   <script src="app/services/authService.js"></script>
@@ -48,6 +49,7 @@
   <script src="app/services/settingsService.js"></script>
   <script src="app/services/bookService.js"></script>
   <script src="app/services/eventsService.js"></script>
+  <script src="app/services/sportsService.js"></script>
 
   <!-- main Angular app files -->
   <script src="app/app.routes.js"></script>
