--- a/public/app/views/pages/newSport.html
+++ b/public/app/views/pages/newSport.html
@@ -1,6 +1,71 @@
 <md-card>
   <md-card-content>
 
+    <form ng-submit="sports.isUpdate ? sports.editedMatch() : sports.addMatch()">
+
+      <md-input-container>
+        <label>Tipo de deporte</label>
+        <input name="clientName" type="text" ng-model="sports.match.name">
+      </md-input-container>
+
+      <md-autocomplete
+          md-selected-item="sports.match.place"
+          md-search-text-change="sports.matchData('place',sports.search)"
+          md-search-text="sports.search"
+          md-selected-item-change="sport.selectedItemChange(item,'place')"
+          md-items="item in sports.matchData('place',sports.search)"
+          md-item-text="item"
+          placeholder="Instalaciones: "
+          ng-model-options="{debounce: 500}"
+          >
+        <md-item-template>
+          <span md-highlight-text="sports.search" md-highlight-flags="^i">{{item}}</span>
+        </md-item-template>
+        <md-not-found>
+          No hemos encontrado "{{sports.search}}".
+          <a ng-click="sports.newData(sports.search,'place')">Añadir</a>
+        </md-not-found>
+      </md-autocomplete>
+
+
+      <md-input-container>
+        <label>Número de jugadores por equipo</label>
+        <input name="clientName" type="number" ng-model="sports.match.playersPerTeam">
+      </md-input-container>
+
+      <md-input-container>
+        <label>Número de equipos</label>
+        <input name="clientName" type="number" ng-model="sports.match.numberOfTeams">
+      </md-input-container>
+
+	  <md-datepicker ng-model="sports.match.date" md-placeholder="Fecha">
+	  </md-datepicker>
+
+    <input type="Time" ng-model="sports.match.startTime" placeholder="HH:mm">
+    <input type="Time" ng-model="sports.match.endTime" placeholder="HH:mm">
+
+	  <md-checkbox  ng-model="sports.match.isLocked">
+	    Bloquear
+	  </md-checkbox>
+
+    <md-checkbox  ng-model="sports.match.waitingList">
+      Marcar último equipo como lista de espera
+    </md-checkbox>
+
+      <div class="standard" ng-repeat="team in sports.getNumber(sports.match.numberOfTeams) track by $index">
+      <p ng-if="$index+1 == sports.match.numberOfTeams && sports.match.waitingList">Lista de espera</p>
+      <p ng-if="$index+1 != sports.match.numberOfTeams || !sports.match.waitingList">Equipo {{$index + 1}}</p>
+	      <md-input-container ng-repeat="player in sports.getNumber(sports.match.playersPerTeam) track by $index">
+	        <label>{{player}}</label>
+	        <input name="clientName" type="text" ng-model="sports.match.playersList[$parent.$index][$index]">
+	      </md-input-container>
+      </div>
+
+      <md-button type="submit" id="addMatchButton" class="md-raised" ng-class="'md-primary'" aria-label="Enviar">
+        <span>{{sports.sendButtonText}}</span>
+      </md-button>
+    </form>
+
 
   </md-card-content>
 </md-card>
