--- a/public/app/views/pages/sports.html
+++ b/public/app/views/pages/sports.html
@@ -1,8 +1,23 @@
 <md-card>
-  <md-card-content>
+  <md-card-content ng-init="sports.getSports()">
 
     <md-list>
       <md-subheader class="md-no-sticky">Listado</md-subheader>
+
+      <md-list-item class="md-3-line" ng-repeat="match in sports.sports| track by sports.date" >
+        <div class="md-list-item-text">
+        <h3><b>{{ sport.name }}</b></h3>
+        </div>
+        <md-button class="md-warn" ng-click="sports.editMatch(match._id)">Editar</md-button>
+        <md-button class="md-warn" ng-click="sports.deleteMatch(match._id)">Borrar</md-button>
+      </md-list-item>
+      <button ng-disabled="sports.currentPage == 1" ng-click="sports.prevPressed()">
+          Previous
+      </button>
+      {{sports.currentPage}}/{{sports.numPages}}
+      <button ng-disabled="sports.currentPage >= sports.numPages" ng-click="sports.nextPressed()">
+          Next
+      </button>
 
 
       <md-divider ></md-divider>
