--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,6 @@
     General styles
 */
 
-
 .normal{
     background-color:#f2f2f2;
 }
@@ -30,6 +29,7 @@
 /* 
     Login Page
 */
+
 .landing{
     background: url('../img/bgl.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -42,21 +42,51 @@
     padding-right: 25%;
     padding-left: 25%;
     padding-top: 15%;
+    text-align: center;
+}
+
+.login md-card{
+    max-width: 600px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.login img{
+    width: auto;
+    height: 125px;
+    margin-bottom:0px;
+    margin-top:5%;
+}
+
+.logInGroup{
+    margin-top: 10%;
+    margin-bottom: 2%;
 }
 
 @media (max-width: 992px) {
     .login{
         padding-top: 20%;
-        padding-right: 10%;
-        padding-left: 10%;
+        padding-right: 20%;
+        padding-left: 20%;
+    }
+    .login img{
+        height: 100px;
     }
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .login{
-        padding-top: 30%;
+        padding-top: 20%;
         padding-right: 1%;
         padding-left: 1%;
+    }
+
+    .login .md-display-1{
+        font-size: 24px;
+    }
+
+    .login img{
+        height: 90px;
     }
 }
