--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -38,14 +38,14 @@
 
                 <div layout="row">
                 <span flex></span>
-                <md-button type="submit" flex="10" id="MealsButton" class="md-raised" ng-class="meals.MealError ? 'md-warn' : 'md-primary'" aria-label="Enviar">
+                <md-button type="submit" id="MealsButton" class="md-raised" ng-class="meals.MealError ? 'md-warn' : 'md-primary'" aria-label="Enviar">
                     <span>{{ meals.mealButtontext }}</span>
                 </md-button>
                 <span flex></span>
                 </div>
             </form>
 
-            <p ng-init="meals.getLastDay()">Fecha mínima actual: <b>{{meals.currentDate | date : 'dd-MM-yyyy' }}</b></p>
+            <p class="md-subhead" ng-init="meals.getLastDay()">Fecha mínima actual: <b>{{meals.currentDate | date : 'dd-MM-yyyy' }}</b></p>
 
         </md-card-content>
     </md-card>
@@ -53,16 +53,18 @@
 
     <md-card ng-init="meals.myMeals()">
         <md-card-content>
-            <h2>Mis pedidos</h2>
+            <h2 class="md-headline">Mis pedidos</h2>
             <md-divider ></md-divider>
-            <md-list-item class="md-3-line" ng-repeat="request in meals.myRequests| orderBy:'date'">
-                <div class="md-list-item-text">
-                    <h3><b>{{ request.id }}</b></h3>
-                    <h4>{{ request.change }}</h4>
+            <md-list-item class="md-3-line" ng-repeat="request in meals.myRequests| orderBy:'date'" layout="row">
+                <div class="md-list-item-text" layout="column" flex>
+                    <h3>{{ request.change }}</h3>
                     <p>{{ request.date | date:'dd-MM-yyyy' }}</p>
                 </div>
-                <md-button class="md-warn" ng-click="meals.deleteRequest(request._id)">Borrar</md-button>
+                <md-button class="md-icon-button" aria-label="Borrar" style="margin-top:22px;" ng-click="meals.deleteRequest(request._id)">
+                    <md-icon class="material-icons" aria-label="Actualizar fecha mínima">delete</md-icon>
+                </md-button>
             </md-list-item>
+
         </md-card-content>
     </md-card>
 </md-content>
