--- a/public/app/views/pages/mealRequests.html
+++ b/public/app/views/pages/mealRequests.html
@@ -5,14 +5,12 @@
     </md-button>
     <md-datepicker ng-model="meals.pickDate" ng-change="meals.getMeals(meals.pickDate)" md-placeholder="Fecha"></md-datepicker>
     <md-list>
-      <md-subheader class="md-no-sticky">Listado</md-subheader>
-      <md-list-item class="md-3-line" ng-repeat="(key, value) in meals.requests| groupBy: 'change' as requests">
-        <div class="md-list-item-text">
-        <h3>Group name: {{ key }}: <b>{{requests[key].length}}</b></h3>
-        <li ng-repeat="user in value">
-          {{ user.id }}<span ng-if="user.dietMeal"> (Dieta)</span> 
-        </li>
-        </div>
+      <md-subheader class="md-no-sticky">Comidas</md-subheader>
+      <md-list-item class="md-2-line" ng-repeat="(key, value) in meals.requests| groupBy: 'change' as requests">
+          <div class="md-list-item-text">
+            <h3>{{ key }}: <b>{{requests[key].length}}</b></h3>
+            <p ng-repeat="user in value" style="display:inline">{{ user.id }}<span ng-if="user.dietMeal">(Dieta)</span> </p>
+          </div>
       </md-list-item>
       <md-divider></md-divider>
     </md-list>
