--- a/public/app/views/pages/booksTaken.html
+++ b/public/app/views/pages/booksTaken.html
@@ -1,34 +1,28 @@
 <md-card>
   <md-card-content ng-init="books.getBooksTaken()">
-
-    <md-list>
-      <md-subheader class="md-no-sticky">Listado</md-subheader>
-
-      <md-list-item class="md-3-line" ng-repeat="book in books.books" >
-        <div class="md-list-item-text">
-        <h3><b>{{ book.numero }}</b></h3>
-        <h4>{{ book.apellidos }}</h4>
-        <p>{{ book.nombre }}</p>
-        <p>{{ book.titulo }}</p>
-        <p>{{ book.idioma }}</p>
-        <p>{{ book.lugar }}</p>
-        <p>{{ book.enUso }}</p>
-        <p>{{ book.fecha }}</p>
-        </div>
-        <md-button class="md-primary" ng-click="books.takeBook(book._id)">Coger</md-button>
-        <md-button class="md-warn" ng-click="books.deleteBook(book._id)">Borrar</md-button>
-      </md-list-item>
-      <button ng-disabled="books.currentPage == 1" ng-click="books.prevPressed()">
-          Previous
-      </button>
-      {{books.currentPage}}/{{books.numPages}}
-      <button ng-disabled="books.currentPage >= books.numPages" ng-click="books.nextPressed()">
-          Next
-      </button>
-
-      <md-divider ></md-divider>
-
-    </md-list>
+      <h2 class="md-headline">Libros</h2>
+      <md-divider></md-divider>
+        <md-list>
+            <p ng-if="books.books.length == 0">Actualmente hay ningún libro fuera de la biblioteca</p>
+            <md-list-item class="md-3-line" ng-repeat="book in books.books">
+                <div class="md-list-item-text" layout="column">
+                    <h3>{{ book.titulo }}</h3>
+                    <h4>{{ book.apellidos }}, {{ book.nombre }}</h4>
+                    <p>{{ book.lugar }}. {{ book.idioma }}</p>
+                </div>
+                <md-button class="md-icon-button" aria-label="Borrar" style="margin-top:16px;" ng-click="books.returnBook(book._id)">
+                    <md-icon class="material-icons" aria-label="Actualizar fecha mínima">archive</md-icon>
+                </md-button>
+                <md-button class="md-icon-button" ng-disabled="true" aria-label="Usuario" style="margin-top:16px;">
+                    {{ book.enUso }}
+                </md-button>
+            </md-list-item>
+            <div ng-if="books.books.length != 0">
+              <md-button class="md-raised md-primary" ng-disabled="books.currentPage == 1" ng-click="books.prevPressed()">Anterior</md-button>
+              <span class="md-subhead" >{{books.currentPage}}/{{books.numPages}}</span>
+              <md-button class="md-raised md-primary" ng-disabled="books.currentPage >= books.numPages" ng-click="books.nextPressed()">Siguiente</md-button>
+            </div>
+        </md-list>
 
   </md-card-content>
 </md-card>
