--- a/public/app/views/pages/books.html
+++ b/public/app/views/pages/books.html
@@ -10,6 +10,7 @@
             </div>
         </div>
         <md-list>
+            <p ng-if="books.books.length == 0">Lo sentimos, ningún libro coincide con el criterio de búsqueda</p>
             <md-list-item class="md-3-line" ng-repeat="book in books.books| filter:books.searchAll track by book.numero" >
                 <div class="md-list-item-text" layout="column">
                     <h3>{{ book.titulo }}</h3>
@@ -26,9 +27,11 @@
                     {{ book.enUso }}
                 </md-button>
             </md-list-item>
-            <md-button class="md-raised md-primary" ng-disabled="books.currentPage == 1" ng-click="books.prevPressed()">Anterior</md-button>
-            <span class="md-subhead" >{{books.currentPage}}/{{books.numPages}}</span>
-            <md-button class="md-raised md-primary" ng-disabled="books.currentPage >= books.numPages" ng-click="books.nextPressed()">Siguiente</md-button>
+            <div ng-if="books.books.length != 0">
+              <md-button class="md-raised md-primary" ng-disabled="books.currentPage == 1" ng-click="books.prevPressed()">Anterior</md-button>
+              <span class="md-subhead" >{{books.currentPage}}/{{books.numPages}}</span>
+              <md-button class="md-raised md-primary" ng-disabled="books.currentPage >= books.numPages" ng-click="books.nextPressed()">Siguiente</md-button>
+            </div>
         </md-list>
     </md-card-content>
 </md-card>
