--- a/public/app/views/pages/newSport.html
+++ b/public/app/views/pages/newSport.html
@@ -66,6 +66,7 @@
       </md-button>
     </form>
 
+        <md-button class="md-warn" ng-click="sports.deleteMatch(match._id)">Borrar</md-button>
 
   </md-card-content>
 </md-card>
