md-fab starts closed
Add a workaround to fix md-fab starting open on page load when set as
‘closed’ using md-fling animation. More info:
https://github.com/angular/material/issues/6111

--- a/public/app/views/pages/books.html
+++ b/public/app/views/pages/books.html
@@ -36,7 +36,7 @@
     </md-card-content>
 </md-card>
 
-<md-fab-speed-dial ng-if="$root.userData.library == true" md-open="false" md-direction="up" ng-class="'md-fling md-fab-bottom-right customFab'">
+<md-fab-speed-dial ng-if="$root.userData.library == true" md-open="false" md-direction="up" ng-class="'md-fling md-fab-bottom-right customFab'" ng-cloak>
     <md-fab-trigger>
         <md-button aria-label="menu" class="md-fab md-primary hue-2" >
             <md-icon class="material-icons">menu</md-icon>
