--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -69,7 +69,7 @@
     </md-card>
 </md-content>
 
-<md-fab-speed-dial ng-if="$root.userData.meals == true" md-open="false" md-direction="up" ng-class="'md-fling md-fab-bottom-right customFab'">
+<md-fab-speed-dial ng-if="$root.userData.meals == true" md-open="false" md-direction="up" ng-class="'md-fling md-fab-bottom-right customFab'" ng-cloak>
     <md-fab-trigger>
         <md-button aria-label="menu" class="md-fab md-primary hue-2" >
             <md-icon class="material-icons">menu</md-icon>
